ipc/ipdl/test/ipdl/ok/PNested.ipdl
[NestedUpTo=inside_cpow, ChildProc=any]
sync protocol PNested {
parent:
  [Nested=not] async NotNested();
  [Nested=inside_sync] sync InsideSync();
  [Nested=inside_cpow] async InsideCpow();
  [Nested=inside_cpow] sync InsideCpowSync();
};
