ipc/ipdl/test/ipdl/error/PExtendedAttrInvalidValue.ipdl
//error: invalid value for attribute `NestedUpTo', expected one of: not, inside_sync, inside_cpow

[NestedUpTo=invalid] async protocol PExtendedAttrInvalidValue {
parent:
    async Msg();
};
